# OpenTAKServer

./: CHANGELOG.md  Dockerfile  README.md  pyproject.toml  pytest.ini  requirements.txt  start.sh
examples/: hostname_resolver_example.py
integration_tests/: INTEGRATION_TEST_SUMMARY.md  production_integration_report.json  run_production_integration.py  test_production_integration.py
opentakserver/: app.py  defaultconfig.py  hostname_resolver.py
opentakserver/api_server/: README.md  __init__.py  config.py  fixed_server.py  server.py
opentakserver/blueprints/: enhanced_api.py
tests/: README.md  comprehensive_test_report.json  production_integration_report.json  qr_validation_utils.py  run_comprehensive_tests.py  run_integration_validation.py  run_production_integration.py  test_deployment_scenarios.py  test_error_handling.py  test_hostname_resolver.py  test_integration_validation.py  test_production_integration.py  test_qr_api_integration.py  test_qr_code_generation.py  test_qr_decoding_validation.py  test_user_creation.py  test_validation_demo.py  validate_tests.py
