[tool.poetry]
name = "OpenTAKServer"
version = "0.0.0"
description = "A server for ATAK, WinTAK, and iTAK"
authors = ["OpenTAKServer <opentakserver@gmail.com>"]
readme = "README.md"
license = "GPL-3.0-or-later"
repository = "https://github.com/brian7704/OpenTAKServer"
documentation = "https://docs.opentakserver.io"

[tool.poetry.dependencies]
python = ">=3.10"
# Core Flask and web framework
flask = "3.1.0"
flask-cors = "5.0.0"
flask-socketio = "5.5.1"
flask-apscheduler = "1.13.1"
flask-migrate = "4.1.0"
flask-sqlalchemy = "3.1.1"
Flask-Security-Too = {version="5.6.1", extras=["common", "mfa"]}
# Socket.IO and async support
python-socketio = {extras = ["client", "websocket_client", "asyncio_client"], version = "5.12.1"}
gevent = "25.5.1"
eventlet = "0.40.0"
# Database and messaging
sqlalchemy = "2.0.39"
sqlalchemy-utils = "0.41.2"
pika = "1.3.2"
kombu = "5.4.2"
# System monitoring and utilities
psutil = "6.1.0"
colorlog = "6.9.0"
pyfiglet = "1.0.2"
PyYAML = "6.0.2"
PyJWT = "2.9.0"
pyOpenSSL = "24.2.1"
pyotp = "2.9.0"
# TAK-specific functionality
pytak = "6.3.2"
protobuf = "5.28.3"
meshtastic = "2.7.0"
unishox2-py3 = "1.0.0"
# Data processing and parsing
beautifulsoup4 = "4.12.3"
lxml = "5.3.0"
simplekml = "1.3.6"
tldextract = "5.1.2"
# External data sources (ADSB, AIS)
adsbxcot = "6.0.4"
aiscot = "5.2.1"
# APK analysis for packages
androguard = "4.1.2"
# Geographic calculations
pygc = "1.3.0"
# Video streaming support
yt-dlp = "^2024.0.0"
# Development and testing
pytest = "8.3.3"
pytest-cov = "6.0.0"
# Build system
poetry-dynamic-versioning = {version = "1.8.0", extras = ["plugin"]}

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
dirty = false
pattern = "((?P<epoch>\\d+)!)?(?P<base>\\d+(\\.\\d+)*)"

[tool.poetry-dynamic-versioning.files."opentakserver/__init__.py"]
persistent-substitution = true
initial-content = """
  # These version placeholders will be replaced later during substitution.
  __version__ = "0.0.0"
  __version_tuple__ = (0, 0, 0)
"""

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry.scripts]
opentakserver = "opentakserver.app:main"
opentakserver-api = "opentakserver.api_server.server:main"
eud_handler = "opentakserver.eud_handler.eud_handler:main"
cot_parser = "opentakserver.cot_parser.cot_parser:main"